cabal-version:      3.0
name:               aoc2021
version:            0.1.0.0
synopsis:

description:        Solutions for Advent of Code 2021
homepage:

license:            ISC
license-file:       LICENSE
author:             Robbert van der Helm
maintainer:         mail@robbertvanderhelm.nl

common base
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:      -Wall -Wextra -Wpedantic

    build-depends:    base ^>=4.14.3.0,

executable day-1
    import:           base
    main-is:          Day1.hs

executable day-2
    import:           base
    main-is:          Day2.hs

executable day-3
    import:           base
    main-is:          Day3.hs

    build-depends:    vector,
