cabal-version:      3.0
name:               aoc2021
version:            0.1.0.0
synopsis:

description:        Solutions for Advent of Code 2021
homepage:

license:            ISC
license-file:       LICENSE
author:             Robbert van der Helm
maintainer:         mail@robbertvanderhelm.nl

common base
    -- NOTE: The @hs-source-dirs@ could also be specified here, but hls doesn't
    --       seem to get confused by that
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra

    build-depends:    base ^>=4.14.3.0,

executable day-1
    import:           base
    hs-source-dirs:   app
    main-is:          Day1.hs

executable day-2
    import:           base
    hs-source-dirs:   app
    main-is:          Day2.hs

executable day-3
    import:           base
    hs-source-dirs:   app
    main-is:          Day3.hs

    build-depends:    vector,

executable day-4
    import:           base
    hs-source-dirs:   app
    main-is:          Day4.hs

    build-depends:    mtl,
                      repa ^>=3.4,
                      split,
                      unordered-containers,

executable day-5
    import:           base
    hs-source-dirs:   app
    main-is:          Day5.hs

    build-depends:    split,
                      vector,

executable day-6
    import:           base
    hs-source-dirs:   app
    main-is:          Day6.hs

    build-depends:    split,
