cabal-version:      3.0
name:               aoc2021
version:            0.1.0.0
synopsis:

description:        Solutions for Advent of Code 2021
homepage:

license:            ISC
license-file:       LICENSE
author:             Robbert van der Helm
maintainer:         mail@robbertvanderhelm.nl

common base
    -- NOTE: The @hs-source-dirs@ could also be specified here, but hls doesn't
    --       seem to get confused by that
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra

    build-depends:    base ^>=4.14.3.0,

executable day-1
    import:           base
    hs-source-dirs:   app
    main-is:          Day1.hs

executable day-2
    import:           base
    hs-source-dirs:   app
    main-is:          Day2.hs

executable day-3
    import:           base
    hs-source-dirs:   app
    main-is:          Day3.hs

    build-depends:    vector,

executable day-4
    import:           base
    hs-source-dirs:   app
    main-is:          Day4.hs

    build-depends:    mtl,
                      repa ^>=3.4,
                      split,
                      unordered-containers,

executable day-5
    import:           base
    hs-source-dirs:   app
    main-is:          Day5.hs

    build-depends:    split,
                      vector,

executable day-6
    import:           base
    hs-source-dirs:   app
    main-is:          Day6.hs

    build-depends:    containers,
                      split,
                      -- For an additional vector based implementation
                      criterion,
                      vector,

executable day-7
    import:           base
    hs-source-dirs:   app
    main-is:          Day7.hs

    build-depends:    containers,
                      split,
                      criterion,

executable day-8
    import:           base
    hs-source-dirs:   app
    main-is:          Day8.hs

    -- The simulated annealing actually benefits from multithreading
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N12

    build-depends:    containers,
                      split,
                      vector,
                      -- Because I didn't feel like writing my own simulated
                      -- annealing algorithm
                      hmatrix,
                      hmatrix-gsl,
                      parallel,

executable day-9
    import:           base
    hs-source-dirs:   app
    main-is:          Day9.hs

    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:    deepseq,
                      -- Wicked! Wicked!
                      massiv,

executable day-10
    import:           base
    hs-source-dirs:   app
    main-is:          Day10.hs

executable day-11
    import:           base
    hs-source-dirs:   app
    main-is:          Day11.hs

    build-depends:    deepseq,
                      -- Jungle is massiv!
                      massiv,
                      mtl,

executable day-12
    import:           base
    hs-source-dirs:   app
    main-is:          Day12.hs

    build-depends:    containers,
                      hashable,
                      mtl,
                      split,
                      unordered-containers,

executable day-13
    import:           base
    hs-source-dirs:   app
    main-is:          Day13.hs

    build-depends:    massiv,
                      split,
